# swarmtunes-server

./: .dockerignore  .gitignore  CONTRIBUTING  CONTRIBUTING.md  LICENSE  README  README.md  TODO  alembic.ini  dev.sh  dockerentry.sh  dockerfile  import.py  lookup.json  n.note  pyproject.toml  readme.md  run.sh  server.py  test.py  test.sh  token.json  verify_songs.py
app/: main.py  pyproject.toml
app/abstract/: .database.py  id_object.py  serializer.py
app/api/v1/: album.py  auth.py  file.py  playlist.py  playlists.py  server.py  server.py.old  shared.py  song.py
app/automated/: albums.py  background.py  backup.py  cleanup.py  delete.py  download_missing.py  sync.py  tasks.py
app/automated/downloader/: correct.py  metadata.py
app/automated/sync/: maintenance.py.old
app/core/: backup.py  config.py  cover.py  data_system.py  export.py  export.py.old  log.py  paths.py  scheduler.py  service.py
app/database/: database.py  dependencies.py  models.py  relationships.py  types.py
app/database/models/: artist.py  playlist.py  song.py  user.py
app/downloader/: correct.py  load_metadata.py  metadata.py
app/features/: __init__.py
app/features/album/: __init__.py  album.py  album_manager.py.old  album_storage.py  api.py  convert.py  json.py
app/features/artist/: __init__.py  api.py  artist.py  convert.py
app/features/artwork/: __init__.py  artwork.py  collection.py  song.py
app/features/collection/: __init__.py  song_collection.py
app/features/identity/: __init__.py  identity.py  (+1 more)
app/general/: auth.py  embed.py  export.py  filters.py  ip.py  search.py
(+131 files in other folders)
